@@ -1,6 +1,6 @@
 dnl Functions for libfvalue
 dnl
-dnl Version: 20120701
+dnl Version: 20130415
 
 dnl Function to detect if libfvalue available
 dnl ac_libfvalue_dummy is used to prevent AC_CHECK_LIB adding unnecessary -l<library> arguments
@@ -24,7 +24,7 @@ AC_DEFUN([AX_LIBFVALUE_CHECK_LIB],
    [test "x$cross_compiling" != "xyes" && test "x$PKGCONFIG" != "x"],
    [PKG_CHECK_MODULES(
     [libfvalue],
-    [libfvalue >= 20120428],
+    [libfvalue >= 20130415],
     [ac_cv_libfvalue=yes],
     [ac_cv_libfvalue=no])
    ])
@@ -35,7 +35,7 @@ AC_DEFUN([AX_LIBFVALUE_CHECK_LIB],
    ac_cv_libfvalue_LIBADD="$pkg_cv_libfvalue_LIBS"],
    [dnl Check for headers
    AC_CHECK_HEADERS([libfvalue.h])
-  
+
    AS_IF(
     [test "x$ac_cv_header_libfvalue_h" = xno],
     [ac_cv_libfvalue=no],
@@ -47,7 +47,67 @@ AC_DEFUN([AX_LIBFVALUE_CHECK_LIB],
      libfvalue_get_version,
      [ac_cv_libfvalue_dummy=yes],
      [ac_cv_libfvalue=no])
-   
+
+    dnl Data handle functions
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_data_handle_initialize,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_data_handle_clone,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_data_handle_free,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_data_handle_get_data,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_data_handle_set_data,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_data_handle_get_data_flags,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_data_handle_set_data_flags,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_data_handle_get_number_of_value_entries,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_data_handle_get_value_entry,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_data_handle_set_value_entry,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_data_handle_append_value_entry,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+
     dnl Integer functions
     AC_CHECK_LIB(
      fvalue,
@@ -75,7 +135,7 @@ AC_DEFUN([AX_LIBFVALUE_CHECK_LIB],
      libfvalue_utf8_string_with_index_copy_to_integer,
      [ac_cv_libfvalue_dummy=yes],
      [ac_cv_libfvalue=no])
- 
+
     AC_CHECK_LIB(
      fvalue,
      libfvalue_utf16_string_copy_from_integer,
@@ -96,7 +156,7 @@ AC_DEFUN([AX_LIBFVALUE_CHECK_LIB],
      libfvalue_utf16_string_with_index_copy_to_integer,
      [ac_cv_libfvalue_dummy=yes],
      [ac_cv_libfvalue=no])
- 
+
     AC_CHECK_LIB(
      fvalue,
      libfvalue_utf32_string_copy_from_integer,
@@ -117,20 +177,20 @@ AC_DEFUN([AX_LIBFVALUE_CHECK_LIB],
      libfvalue_utf32_string_with_index_copy_to_integer,
      [ac_cv_libfvalue_dummy=yes],
      [ac_cv_libfvalue=no])
- 
+
     dnl String functions
     AC_CHECK_LIB(
      fvalue,
      libfvalue_utf8_string_split,
      [ac_cv_libfvalue_dummy=yes],
      [ac_cv_libfvalue=no])
- 
+
     AC_CHECK_LIB(
      fvalue,
      libfvalue_utf16_string_split,
      [ac_cv_libfvalue_dummy=yes],
      [ac_cv_libfvalue=no])
- 
+
     dnl Split string functions
     AC_CHECK_LIB(
      fvalue,
@@ -152,7 +212,7 @@ AC_DEFUN([AX_LIBFVALUE_CHECK_LIB],
      libfvalue_split_utf8_string_get_segment_by_index,
      [ac_cv_libfvalue_dummy=yes],
      [ac_cv_libfvalue=no])
- 
+
     AC_CHECK_LIB(
      fvalue,
      libfvalue_split_utf16_string_free,
@@ -173,7 +233,7 @@ AC_DEFUN([AX_LIBFVALUE_CHECK_LIB],
      libfvalue_split_utf16_string_get_segment_by_index,
      [ac_cv_libfvalue_dummy=yes],
      [ac_cv_libfvalue=no])
- 
+
     dnl Table functions
     AC_CHECK_LIB(
      fvalue,
@@ -187,12 +247,30 @@ AC_DEFUN([AX_LIBFVALUE_CHECK_LIB],
      [ac_cv_libfvalue=no])
     AC_CHECK_LIB(
      fvalue,
-     libfvalue_table_clone,
+     libfvalue_table_resize,
      [ac_cv_libfvalue_dummy=yes],
      [ac_cv_libfvalue=no])
     AC_CHECK_LIB(
      fvalue,
+     libfvalue_table_clone,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+
+    AC_CHECK_LIB(
+     fvalue,
      libfvalue_table_get_number_of_values,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_table_get_index_by_identifier,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_table_get_value_by_index,
      [ac_cv_libfvalue_dummy=yes],
      [ac_cv_libfvalue=no])
     AC_CHECK_LIB(
@@ -202,7 +280,7 @@ AC_DEFUN([AX_LIBFVALUE_CHECK_LIB],
      [ac_cv_libfvalue=no])
     AC_CHECK_LIB(
      fvalue,
-     libfvalue_table_get_value_by_index,
+     libfvalue_table_set_value_by_index,
      [ac_cv_libfvalue_dummy=yes],
      [ac_cv_libfvalue=no])
     AC_CHECK_LIB(
@@ -210,17 +288,13 @@ AC_DEFUN([AX_LIBFVALUE_CHECK_LIB],
      libfvalue_table_set_value,
      [ac_cv_libfvalue_dummy=yes],
      [ac_cv_libfvalue=no])
-    AC_CHECK_LIB(
-     fvalue,
-     libfvalue_table_set_value_by_index,
-     [ac_cv_libfvalue_dummy=yes],
-     [ac_cv_libfvalue=no])
+
     AC_CHECK_LIB(
      fvalue,
      libfvalue_table_copy_from_utf8_xml_string,
      [ac_cv_libfvalue_dummy=yes],
      [ac_cv_libfvalue=no])
-   
+
     dnl Value functions
     AC_CHECK_LIB(
      fvalue,
@@ -237,6 +311,13 @@ AC_DEFUN([AX_LIBFVALUE_CHECK_LIB],
      libfvalue_value_clone,
      [ac_cv_libfvalue_dummy=yes],
      [ac_cv_libfvalue=no])
+
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_value_get_type,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+
     AC_CHECK_LIB(
      fvalue,
      libfvalue_value_get_identifier,
@@ -245,6 +326,22 @@ AC_DEFUN([AX_LIBFVALUE_CHECK_LIB],
     AC_CHECK_LIB(
      fvalue,
      libfvalue_value_set_identifier,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_value_get_data_handle,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_value_has_data,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_value_get_data_size,
      [ac_cv_libfvalue_dummy=yes],
      [ac_cv_libfvalue=no])
     AC_CHECK_LIB(
@@ -259,7 +356,18 @@ AC_DEFUN([AX_LIBFVALUE_CHECK_LIB],
      [ac_cv_libfvalue=no])
     AC_CHECK_LIB(
      fvalue,
-     libfvalue_value_has_data,
+     libfvalue_value_copy_data,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_value_get_format_flags,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_value_set_format_flags,
      [ac_cv_libfvalue_dummy=yes],
      [ac_cv_libfvalue=no])
 
@@ -283,7 +391,51 @@ AC_DEFUN([AX_LIBFVALUE_CHECK_LIB],
      libfvalue_value_append_value_entry,
      [ac_cv_libfvalue_dummy=yes],
      [ac_cv_libfvalue=no])
-  
+
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_value_copy_from_boolean,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_value_copy_to_boolean,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_value_copy_from_8bit,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_value_copy_to_8bit,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_value_copy_from_16bit,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_value_copy_to_16bit,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_value_copy_from_32bit,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_value_copy_to_32bit,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+
     AC_CHECK_LIB(
      fvalue,
      libfvalue_value_copy_from_64bit,
@@ -294,15 +446,37 @@ AC_DEFUN([AX_LIBFVALUE_CHECK_LIB],
      libfvalue_value_copy_to_64bit,
      [ac_cv_libfvalue_dummy=yes],
      [ac_cv_libfvalue=no])
-  
+
     AC_CHECK_LIB(
      fvalue,
-     libfvalue_value_get_utf8_string_size,
+     libfvalue_value_copy_from_float,
      [ac_cv_libfvalue_dummy=yes],
      [ac_cv_libfvalue=no])
     AC_CHECK_LIB(
      fvalue,
+     libfvalue_value_copy_to_float,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_value_copy_from_double,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_value_copy_to_double,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+
+    AC_CHECK_LIB(
+     fvalue,
      libfvalue_value_copy_from_utf8_string,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_value_get_utf8_string_size,
      [ac_cv_libfvalue_dummy=yes],
      [ac_cv_libfvalue=no])
     AC_CHECK_LIB(
@@ -312,9 +486,10 @@ AC_DEFUN([AX_LIBFVALUE_CHECK_LIB],
      [ac_cv_libfvalue=no])
     AC_CHECK_LIB(
      fvalue,
-     libfvalue_value_get_utf16_string_size,
+     libfvalue_value_copy_to_utf8_string_with_index,
      [ac_cv_libfvalue_dummy=yes],
      [ac_cv_libfvalue=no])
+
     AC_CHECK_LIB(
      fvalue,
      libfvalue_value_copy_from_utf16_string,
@@ -322,20 +497,61 @@ AC_DEFUN([AX_LIBFVALUE_CHECK_LIB],
      [ac_cv_libfvalue=no])
     AC_CHECK_LIB(
      fvalue,
+     libfvalue_value_get_utf16_string_size,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+    AC_CHECK_LIB(
+     fvalue,
      libfvalue_value_copy_to_utf16_string,
      [ac_cv_libfvalue_dummy=yes],
      [ac_cv_libfvalue=no])
-  
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_value_copy_to_utf16_string_with_index,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_value_copy_from_utf32_string,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_value_get_utf32_string_size,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_value_copy_to_utf32_string,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_value_copy_to_utf32_string_with_index,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_value_read_from_file_stream,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
     AC_CHECK_LIB(
      fvalue,
      libfvalue_value_write_to_file_stream,
      [ac_cv_libfvalue_dummy=yes],
      [ac_cv_libfvalue=no])
- 
+
     dnl Value type functions
     AC_CHECK_LIB(
      fvalue,
      libfvalue_value_type_initialize,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_value_type_initialize_with_data_handle,
      [ac_cv_libfvalue_dummy=yes],
      [ac_cv_libfvalue=no])
 
@@ -347,6 +563,12 @@ AC_DEFUN([AX_LIBFVALUE_CHECK_LIB],
     AC_CHECK_LIB(
      fvalue,
      libfvalue_value_type_append_data_string,
+     [ac_cv_libfvalue_dummy=yes],
+     [ac_cv_libfvalue=no])
+
+    AC_CHECK_LIB(
+     fvalue,
+     libfvalue_value_type_set_data_strings_array,
      [ac_cv_libfvalue_dummy=yes],
      [ac_cv_libfvalue=no])
 
